[gd_scene load_steps=5 format=2]

[ext_resource path="res://meething/meething.gd" type="Script" id=1]
[ext_resource path="res://meething/meeting_buttongroup.tres" type="ButtonGroup" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )

[node name="meething" type="PopupDialog"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="by_who_label" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -318.5
margin_right = 318.5
margin_bottom = 104.0
text = " โดย ใคร"
align = 1
valign = 1

[node name="timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 20.0
one_shot = true
autostart = true

[node name="center_container" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -604.0
margin_top = -304.0
margin_right = 604.0
margin_bottom = 304.0

[node name="player_box_grid_container" type="GridContainer" parent="center_container"]
unique_name_in_owner = true
margin_right = 1208.0
margin_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="0" type="Button" parent="center_container/player_box_grid_container"]
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/0"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="1" type="Button" parent="center_container/player_box_grid_container"]
margin_left = 404.0
margin_right = 804.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="2" type="Button" parent="center_container/player_box_grid_container"]
margin_left = 808.0
margin_right = 1208.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="3" type="Button" parent="center_container/player_box_grid_container"]
margin_top = 204.0
margin_right = 400.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="4" type="Button" parent="center_container/player_box_grid_container"]
margin_left = 404.0
margin_top = 204.0
margin_right = 804.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="5" type="Button" parent="center_container/player_box_grid_container"]
margin_left = 808.0
margin_top = 204.0
margin_right = 1208.0
margin_bottom = 404.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="6" type="Button" parent="center_container/player_box_grid_container"]
margin_top = 408.0
margin_right = 400.0
margin_bottom = 608.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/6"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="7" type="Button" parent="center_container/player_box_grid_container"]
margin_left = 404.0
margin_top = 408.0
margin_right = 804.0
margin_bottom = 608.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/7"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="8" type="Button" parent="center_container/player_box_grid_container"]
margin_left = 808.0
margin_top = 408.0
margin_right = 1208.0
margin_bottom = 608.0
rect_min_size = Vector2( 400, 200 )
toggle_mode = true
group = ExtResource( 2 )

[node name="label" type="Label" parent="center_container/player_box_grid_container/8"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -204.0
margin_right = 199.0
align = 1
valign = 1

[node name="-1" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 88.0
margin_top = 909.0
margin_right = 388.0
margin_bottom = 1019.0
rect_min_size = Vector2( 300, 100 )
toggle_mode = true
group = ExtResource( 2 )
text = "ข้าม"

[node name="label" type="Label" parent="-1"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="time_progress_bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
margin_top = 110.0
margin_bottom = 214.0
custom_styles/fg = SubResource( 1 )
step = 1.0
value = 50.0

[connection signal="about_to_show" from="." to="." method="_on_meething_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_meething_popup_hide"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
